--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -51,6 +51,7 @@ install:
   - IF %PHP%==1 echo extension=php_mbstring.dll >> php.ini
   - IF %PHP%==1 echo extension=php_fileinfo.dll >> php.ini
   - IF %PHP%==1 echo extension=php_gd2.dll >> php.ini
+  - IF %PHP%==1 echo extension=php_sqlite3.dll >> php.ini
   - IF %PHP%==1 echo @php %%~dp0composer.phar %%* > composer.bat
   - appveyor-retry appveyor DownloadFile https://getcomposer.org/composer.phar
 
