--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -50,17 +50,26 @@ install:
   - IF %PHP%==1 echo extension=php_mbstring.dll >> php.ini
   - IF %PHP%==1 echo extension=php_fileinfo.dll >> php.ini
   - IF %PHP%==1 echo extension=php_gd2.dll >> php.ini
-  - IF %PHP%==1 echo extension=php_sqlsrv.dll >> php.ini
-  - IF %PHP%==1 echo extension=php_pdo_sqlsrv.dll >> php.ini
+  - IF %PHP%==1 echo extension=php_pdo_sqlite.dll >> php.ini
   - IF %PHP%==1 echo extension=php_sqlite3.dll >> php.ini
+  - ps: >-
+        If ($env:php_version -eq "5.6") {
+          Add-Content php.ini "`nextension=php_sqlsrv_nts.dll"
+          Add-Content php.ini "`nextension=php_pdo_sqlsrv_nts.dll"
+          Add-Content php.ini "`n"
+        } Else {
+          Add-Content php.ini "`nextension=php_sqlsrv.dll"
+          Add-Content php.ini "`nextension=php_pdo_sqlsrv.dll"
+          Add-Content php.ini "`n"
+        }
   - IF %PHP%==1 echo @php %%~dp0composer.phar %%* > composer.bat
   - appveyor-retry appveyor DownloadFile https://getcomposer.org/composer.phar
 
 before_test:
   # Database setup for MSSQL
-  - ps: $sqlInstance = "(local)\SQL2014"
-  - ps: sqlcmd -b -E -S "$sqlInstance" -Q "CREATE DATABASE userfrosting"
-  # - ps: sqlcmd -S "$sqlInstance" -U "userfrosting" -P "Password12!"
+  # https://github.com/joomla-framework/database
+  # http://www.drupalonwindows.com/en/blog/continuous-integration-and-testing-drupal-appveyor
+  - ps: sqlcmd -b -E -S "localhost\SQL2014" -Q "CREATE DATABASE userfrosting"
   # Copy sprinkle file
   - cd c:\projects\userfrosting
   - echo F | xcopy app\sprinkles.example.json app\sprinkles.json /y
@@ -69,8 +78,8 @@ before_test:
   # Setup .env
   - echo UF_MODE="debug" > app/.env
   - echo DB_DRIVER="sqlsrv" >> app/.env
-  - echo DB_HOST="(local)\SQL2014" >> app/.env
-  - echo DB_PORT="" >> app/.env
+  - echo DB_HOST="localhost\SQL2014" >> app/.env
+  - echo DB_PORT="1433" >> app/.env
   - echo DB_NAME="userfrosting" >> app/.env
   - echo DB_USER="sa" >> app/.env
   - echo DB_PASSWORD="Password12!" >> app/.env
