--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,11 +1,14 @@
 ## Thanks to Cees-Jan Kiewiet: https://blog.wyrihaximus.net/2016/11/running-php-unit-tests-on-windows-using-appveyor-and-chocolatey/
 
 ## Versioning pattern
-version: '{branch}-{build}'
+version: '{branch} - Build #{build}'
 
 ## Disable unneeded features
-build: off
-deploy: off
+build: false
+deploy: false
+platform:
+  - x64
+clone_folder: C:\projects\userfrosting
 
 ## Test against various PHP versions
 environment:
@@ -15,7 +18,7 @@ environment:
     - php_version: "7.0"
     - php_version: "7.1"
     - php_version: "7.2"
-    - php_version: "7.3"
+    #- php_version: "7.3"
 
 ## Cache composer, chocolatey and php.
 cache:
@@ -30,40 +33,84 @@ cache:
 
 ## Set up environment variables
 init:
-  - SET PATH=C:\Program Files\OpenSSL;c:\tools\php;%PATH%
+  - SET PATH=C:\Program Files\OpenSSL;c:\tools\php;C:\tools\composer;%PATH%
   - SET COMPOSER_NO_INTERACTION=1
-  - SET PHP=1 # This var is connected to PHP install cache
   - SET ANSICON=121x90 (121x90)
 services:
   - mssql2014
 
 ## Install PHP and composer, and run the appropriate composer command
 install:
-  - IF EXIST c:\tools\php (SET PHP=0) # Checks for the PHP install being cached
-  - ps: appveyor-retry cinst --params '""/InstallDir:C:\tools\php""' --ignore-checksums -y php --version ((choco search php --exact --all-versions -r | select-string -pattern $env:php_version | sort { [version]($_ -split '\|' | select -last 1) } -Descending | Select-Object -first 1) -replace '[php|]','')
-  - ps: Install-Product node 10
-  - cd c:\tools\php
-  - IF %PHP%==1 copy php.ini-production php.ini /Y
-  - IF %PHP%==1 echo date.timezone="UTC" >> php.ini
-  - IF %PHP%==1 echo extension_dir=ext >> php.ini
-  - IF %PHP%==1 echo extension=php_openssl.dll >> php.ini
-  - IF %PHP%==1 echo extension=php_mbstring.dll >> php.ini
-  - IF %PHP%==1 echo extension=php_fileinfo.dll >> php.ini
-  - IF %PHP%==1 echo extension=php_gd2.dll >> php.ini
-  - IF %PHP%==1 echo extension=php_pdo_sqlite.dll >> php.ini
-  - IF %PHP%==1 echo extension=php_sqlite3.dll >> php.ini
-  - ps: >-
-        If ($env:php_version -eq "5.6") {
-          Add-Content php.ini "`nextension=php_sqlsrv_nts.dll"
-          Add-Content php.ini "`nextension=php_pdo_sqlsrv_nts.dll"
-          Add-Content php.ini "`n"
-        } Else {
+    - ps: |
+        # Check if installation is cached
+        if (!(Test-Path c:\tools\php)) {
+          appveyor-retry cinst --params '""/InstallDir:C:\tools\php""' --ignore-checksums -y php --version ((choco search php --exact --all-versions -r | select-string -pattern $env:php_version | sort { [version]($_ -split '\|' | select -last 1) } -Descending | Select-Object -first 1) -replace '[php|]','')
+          # install sqlite
+          appveyor-retry cinst -y sqlite
+          Get-ChildItem -Path c:\tools\php
+          cd c:\tools\php
+
+          # Set PHP environment items that are always needed
+          copy php.ini-production php.ini
+          Add-Content php.ini "`n date.timezone=UTC"
+          Add-Content php.ini "`n extension_dir=ext"
+          Add-Content php.ini "`n memory_limit=1G"
+          Add-Content php.ini "`n extension=php_openssl.dll"
+          Add-Content php.ini "`n extension=php_mbstring.dll"
+          Add-Content php.ini "`n extension=php_fileinfo.dll"
+          Add-Content php.ini "`n extension=php_pdo_sqlite.dll"
+          Add-Content php.ini "`n extension=php_sqlite3.dll"
+          Add-Content php.ini "`n extension=php_curl.dll"
+          Add-Content php.ini "`n extension=php_gd2.dll"
+
+          # Get and install the MSSQL DLL's
+          $DLLVersion = "5.2.0"
+          cd c:\tools\php\ext
+          If ($env:php_version -eq "7.2") {
+            $source = "https://windows.php.net/downloads/pecl/releases/sqlsrv/$($DLLVersion)/php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip"
+            $destination = "c:\tools\php\ext\php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip"
+            Invoke-WebRequest $source -OutFile $destination
+            7z x -y php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip > $null
+            $source = "https://windows.php.net/downloads/pecl/releases/pdo_sqlsrv/$($DLLVersion)/php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip"
+            $destination = "c:\tools\php\ext\php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip"
+            Invoke-WebRequest $source -OutFile $destination
+            7z x -y php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip > $null
+          } Else If ($env:php_ver_target -eq "5.6") {
+            $source = "https://cdn.joomla.org/ci/php-sqlsrv.zip"
+            $destination = "c:\tools\php\php-sqlsrv.zip"
+            Invoke-WebRequest $source -OutFile $destination
+            #appveyor-retry appveyor DownloadFile https://cdn.joomla.org/ci/php-sqlsrv.zip
+            7z x php-sqlsrv.zip > $null
+            copy SQLSRV\php_sqlsrv_56_nts.dll ext\php_sqlsrv.dll
+            copy SQLSRV\php_pdo_sqlsrv_56_nts.dll ext\php_pdo_sqlsrv.dll
+          } Else {
+            $source = "https://windows.php.net/downloads/pecl/releases/sqlsrv/$($DLLVersion)/php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip"
+            $destination = "c:\tools\php\ext\php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip"
+            Invoke-WebRequest $source -OutFile $destination
+            7z x -y php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip > $null
+            $source = "https://windows.php.net/downloads/pecl/releases/pdo_sqlsrv/$($DLLVersion)/php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip"
+            $destination = "c:\tools\php\ext\php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip"
+            Invoke-WebRequest $source -OutFile $destination
+            7z x -y php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip > $null
+          }
+          Remove-Item c:\tools\php\* -include .zip
+          cd c:\tools\php
           Add-Content php.ini "`nextension=php_sqlsrv.dll"
           Add-Content php.ini "`nextension=php_pdo_sqlsrv.dll"
           Add-Content php.ini "`n"
+
+          # download Composer
+          if (!(Test-Path C:\tools\composer)) {
+            New-Item -path c:\tools -name composer -itemtype directory
+          }
+          if (!(Test-Path c:\tools\composer\composer.phar)) {
+            appveyor-retry appveyor DownloadFile https://getcomposer.org/composer.phar -Filename C:\tools\composer\composer.phar
+            Set-Content -path 'C:\tools\composer\composer.bat' -Value ('@php C:\tools\composer\composer.phar %*')
+          }
         }
-  - IF %PHP%==1 echo @php %%~dp0composer.phar %%* > composer.bat
-  - appveyor-retry appveyor DownloadFile https://getcomposer.org/composer.phar
+    # install composer dependencies
+    - cd C:\projects\userfrosting
+    - appveyor-retry composer self-update
 
 before_test:
   # Database setup for MSSQL
@@ -71,10 +118,9 @@ before_test:
   # http://www.drupalonwindows.com/en/blog/continuous-integration-and-testing-drupal-appveyor
   - ps: sqlcmd -b -E -S "localhost\SQL2014" -Q "CREATE DATABASE userfrosting"
   # Copy sprinkle file
-  - cd c:\projects\userfrosting
   - echo F | xcopy app\sprinkles.example.json app\sprinkles.json /y
   # Setup SQLite
-  - echo > userfrosting.db
+  # - echo > userfrosting.db
   # Setup .env
   - echo UF_MODE="debug" > app/.env
   - echo DB_DRIVER="sqlsrv" >> app/.env
