--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -81,8 +81,8 @@ install:
             $destination = "c:\tools\php\ext\php-sqlsrv.zip"
             Invoke-WebRequest $source -OutFile $destination
             7z x php-sqlsrv.zip > $null
-            copy SQLSRV\php_sqlsrv_56_nts.dll ext\php_sqlsrv.dll
-            copy SQLSRV\php_pdo_sqlsrv_56_nts.dll ext\php_pdo_sqlsrv.dll
+            copy SQLSRV\php_sqlsrv_56_nts.dll php_sqlsrv.dll
+            copy SQLSRV\php_pdo_sqlsrv_56_nts.dll php_pdo_sqlsrv.dll
           } Else {
             $source = "https://windows.php.net/downloads/pecl/releases/sqlsrv/$($DLLVersion)/php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip"
             $destination = "c:\tools\php\ext\php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip"
@@ -124,7 +124,7 @@ before_test:
   # Setup .env
   - echo UF_MODE="debug" > app/.env
   - echo DB_DRIVER="sqlsrv" >> app/.env
-  - echo DB_HOST='(local)\SQL2014' >> app/.env
+  - echo DB_HOST=(local)\SQL2014 >> app/.env
   - echo DB_PORT="1433" >> app/.env
   - echo DB_NAME="userfrosting" >> app/.env
   - echo DB_USER="sa" >> app/.env
