--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -78,12 +78,10 @@ install:
             Invoke-WebRequest $source -OutFile $destination
             7z x -y php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip > $null
           } ElseIf ($env:php_version -eq "5.6") {
-            $source = "https://cdn.joomla.org/ci/php-sqlsrv.zip"
-            $destination = "c:\tools\php\ext\php-sqlsrv.zip"
+            $source = "https://download.microsoft.com/download/C/D/B/CDB0A3BB-600E-42ED-8D5E-E4630C905371/SQLSRV32.EXE"
+            $destination = "c:\tools\php\ext\sqlsrv.exe"
             Invoke-WebRequest $source -OutFile $destination
-            7z x php-sqlsrv.zip > $null
-            copy SQLSRV\php_sqlsrv_56_nts.dll php_sqlsrv_nts.dll
-            copy SQLSRV\php_pdo_sqlsrv_56_nts.dll php_pdo_sqlsrv_nts.dll
+            7z x sqlsrv.exe > $null
           } Else {
             $source = "https://windows.php.net/downloads/pecl/releases/sqlsrv/$($DLLVersion)/php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip"
             $destination = "c:\tools\php\ext\php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip"
@@ -97,8 +95,8 @@ install:
           Remove-Item c:\tools\php\* -include .zip
           cd c:\tools\php
           If ($env:php_version -eq "5.6") {
-              Add-Content php.ini "`nextension=php_sqlsrv_nts.dll"
-              Add-Content php.ini "`nextension=php_pdo_sqlsrv_nts.dll"
+              Add-Content php.ini "`nextension=php_sqlsrv_56_nts.dll"
+              Add-Content php.ini "`nextension=php_pdo_sqlsrv_56_nts.dll"
               Add-Content php.ini "`n"
           } Else {
               Add-Content php.ini "`nextension=php_sqlsrv.dll"
