Updated docker configuration - Use Alpine for PHP - Removed commands from composer and node services in favour of on-demand command execution - Updated docker README

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,11 +1,17 @@
-FROM php:7.2-fpm
-RUN apt-get update && apt-get install -y \
-    libfreetype6-dev \
-    libjpeg62-turbo-dev \
+FROM php:7.2-fpm-alpine
+
+# Update and install packages
+RUN apk update
+RUN apk add \
+    freetype-dev \
+    libjpeg-turbo-dev \
     libpng-dev \
-    zip \
-    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    zip
+
+# Install and configure PHP extensions
+RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd \
     && docker-php-ext-install -j$(nproc) pdo pdo_mysql \
     && docker-php-ext-install -j$(nproc) zip
+
 WORKDIR /app
