Fix routes order not respected in some case + Moved `userfrosting/uniformresourcelocator` requirement to main composer file + Updated `userfrosting/uniformresourcelocator` minimum version

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "php": ">=5.6",
         "ext-gd": "*",
         "composer/installers": "^1.4.0",
+        "userfrosting/uniformresourcelocator": "~4.2.3",
         "symfony/console": "^3.3",
         "wikimedia/composer-merge-plugin": "^1.4.0"
     },
