--- a/app/sprinkles/core/composer.json
+++ b/app/sprinkles/core/composer.json
@@ -50,7 +50,7 @@
         "userfrosting/cache": "~4.2.0",
         "userfrosting/fortress": "~4.2.0",
         "userfrosting/i18n": "~4.2.0",
-        "userfrosting/session": "~4.2.0",
+        "userfrosting/session": "dev-develop",
         "userfrosting/support": "~4.2.0",
         "vlucas/phpdotenv": "^2"
     },
