--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
 
 before_script:
   # install deps and UF
-  - composer install
+  - COMPOSER_MEMORY_LIMIT=-1 travis_retry composer install --no-interaction
   - php bakery debug
   - php bakery build-assets
   - php bakery migrate
