--- a/app/sprinkles/core/package.json
+++ b/app/sprinkles/core/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "bootstrap": "^3.3.6",
     "clipboard": "^1.5.16",
     "fastclick": "^1.0.6",
-    "font-awesome": "^4.7.0",
     "fontawesome-iconpicker": "^3.2.0",
     "handlebars": "^3.0.3",
     "icheck": "^1.0.1",
