--- a/app/sprinkles/core/package.json
+++ b/app/sprinkles/core/package.json
@@ -16,6 +16,7 @@
     "jquery-slimscroll": "~1.3.8",
     "fastclick": "^1.0.6",
     "ionicons": "^2.0.1",
-    "urijs": "^1.18.4"
+    "urijs": "^1.18.4",
+    "fontawesome-iconpicker": "^3.2.0"
   }
 }
