/userfrosting/public/assets-raw/userfrosting/favicons/manifest.json

--- a/webserver-configs/nginx.conf
+++ b/webserver-configs/nginx.conf
@@ -105,7 +105,7 @@ server {
     ## End - Handle PHP requests
 
     ## Begin - Caching static files
-    location ~* \.(png|gif|jpg|jpeg|svg|ico|css|js|woff|ttf|otf|woff2|eot)$ {
+    location ~* \.(png|gif|jpg|jpeg|svg|ico|css|js|woff|ttf|otf|woff2|eot|json)$ {
         include /etc/nginx/mime.types;
         expires max;
 
