Prevent file content downloads from leaking

--- a/webserver-configs/nginx.conf
+++ b/webserver-configs/nginx.conf
@@ -80,6 +80,12 @@ server {
     }
     ## End - Let's Encrypt
 
+    ## Begin - Prevent file content downloads from leaking
+    location ~ .*\.(env)?$ {
+        deny all;
+    }
+    ## End - Prevent file content downloads from leaking
+
     ## Begin - Handle PHP requests
     location ~ \.(php)$ {
         # Throw away any requests to execute PHP scripts in other directories
