--- a/app/sprinkles/account/schema/requests/check-username.yaml
+++ b/app/sprinkles/account/schema/requests/check-username.yaml
@@ -6,6 +6,9 @@ user_name:
       min: 1
       max: 50
       message: VALIDATE.LENGTH_RANGE
+    required:
+      label: "&USERNAME"
+      message: VALIDATE.REQUIRED
     no_leading_whitespace:
       label: "&USERNAME"
       message: VALIDATE.NO_LEAD_WS
