--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
-        "phpunit/phpunit": "^5.7",
-        "mockery/mockery": "1.0.0-alpha1",
+        "phpunit/phpunit": "^7.5",
+        "mockery/mockery": "^1.2",
         "league/factory-muffin": "^3.0",
         "league/factory-muffin-faker": "^2.0"
     },
