--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,8 +15,6 @@ clone_folder: C:\projects\userfrosting
 environment:
   fast_finish: true
   matrix:
-    - php_version: "5.6"
-    - php_version: "7.0"
     - php_version: "7.1"
     - php_version: "7.2"
     - php_version: "7.3"
@@ -47,12 +45,8 @@ install:
         # Check if installation is cached
         if (!(Test-Path c:\tools\php)) {
 
-          # Install PHP, force 64 bits for PHP 5.6
-          If ($env:php_version -eq "5.6") {
-            appveyor-retry cinst --params '""/InstallDir:C:\tools\php""' --ignore-checksums -y --forcex86 php --version ((choco search php --exact --all-versions -r | select-string -pattern $env:php_version | sort { [version]($_ -split '\|' | select -last 1) } -Descending | Select-Object -first 1) -replace '[php|]','')
-          } Else {
-            appveyor-retry cinst --params '""/InstallDir:C:\tools\php""' --ignore-checksums -y php --version ((choco search php --exact --all-versions -r | select-string -pattern $env:php_version | sort { [version]($_ -split '\|' | select -last 1) } -Descending | Select-Object -first 1) -replace '[php|]','')
-          }
+          # Install PHP
+          appveyor-retry cinst --params '""/InstallDir:C:\tools\php""' --ignore-checksums -y php --version ((choco search php --exact --all-versions -r | select-string -pattern $env:php_version | sort { [version]($_ -split '\|' | select -last 1) } -Descending | Select-Object -first 1) -replace '[php|]','')
 
           # install sqlite
           appveyor-retry cinst -y sqlite
@@ -93,11 +87,6 @@ install:
             $destination = "c:\tools\php\ext\php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip"
             Invoke-WebRequest $source -OutFile $destination
             7z x -y php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip > $null
-          } ElseIf ($env:php_version -eq "5.6") {
-            $source = "https://download.microsoft.com/download/C/D/B/CDB0A3BB-600E-42ED-8D5E-E4630C905371/SQLSRV32.EXE"
-            $destination = "c:\tools\php\ext\sqlsrv.exe"
-            Invoke-WebRequest $source -OutFile $destination
-            7z x sqlsrv.exe > $null
           } Else {
             $source = "https://windows.php.net/downloads/pecl/releases/sqlsrv/$($DLLVersion)/php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip"
             $destination = "c:\tools\php\ext\php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip"
@@ -111,15 +100,9 @@ install:
           Remove-Item c:\tools\php\* -include .zip
 
           cd c:\tools\php
-          If ($env:php_version -eq "5.6") {
-              Add-Content php.ini "`nextension=php_sqlsrv_56_nts.dll"
-              Add-Content php.ini "`nextension=php_pdo_sqlsrv_56_nts.dll"
-              Add-Content php.ini "`n"
-          } Else {
-              Add-Content php.ini "`nextension=php_sqlsrv.dll"
-              Add-Content php.ini "`nextension=php_pdo_sqlsrv.dll"
-              Add-Content php.ini "`n"
-          }
+          Add-Content php.ini "`nextension=php_sqlsrv.dll"
+          Add-Content php.ini "`nextension=php_pdo_sqlsrv.dll"
+          Add-Content php.ini "`n"
 
           # download Composer
           if (!(Test-Path C:\tools\composer)) {
