Revert "Merge branch 'develop' into add-missing-locale-keys"
This reverts commit 963cc861dd025091e7bfdbbc4550f4c7a395e9f3, reversing
changes made to cdd8a12ec293cc355ba54c679450c67ec1e8e582.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,19 @@ services:
     volumes:
       - userfrosting-db:/var/lib/mysql
 
+  composer:
+    image: "composer"
+    volumes:
+      - .:/app
+    working_dir: /app
+
+  node:
+    build:
+      context: ./docker/node
+    volumes:
+      - .:/app
+    working_dir: /app/build
+
 volumes:
   userfrosting-db:
     driver: local
