--- a/app/sprinkles/account/composer.json
+++ b/app/sprinkles/account/composer.json
@@ -13,7 +13,8 @@
     ],
     "require": {
         "birke/rememberme" : "^2.0",
-        "nikic/php-parser" : "^4.2.2"
+        "nikic/php-parser" : "^1",
+        "php": ">=5.6"
     },
     "autoload": {
         "psr-4": {
