--- a/composer.json
+++ b/composer.json
@@ -15,17 +15,17 @@
         "vendor-dir": "app/vendor"
     },
     "require": {
-        "php": ">=7.1",
+        "php": ">=5.6",
         "ext-gd": "*",
         "composer/installers": "^1.4.0",
-        "userfrosting/uniformresourcelocator": "~4.3.0",
-        "symfony/console": "^4.3",
+        "userfrosting/uniformresourcelocator": "~4.2.3",
+        "symfony/console": "^3.3",
         "wikimedia/composer-merge-plugin": "^1.4.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
-        "phpunit/phpunit": "^7.5",
-        "mockery/mockery": "^1.2",
+        "phpunit/phpunit": "^5.7",
+        "mockery/mockery": "1.0.0-alpha1",
         "league/factory-muffin": "^3.0",
         "league/factory-muffin-faker": "^2.0"
     },
