--- a/docker-compose-testdb.yml
+++ b/docker-compose-testdb.yml
@@ -71,6 +71,19 @@ services:
     volumes:
       - userfrosting-test-db:/var/lib/mysql
 
+  composer:
+    image: "composer"
+    volumes:
+      - .:/app
+    working_dir: /app
+
+  node:
+    build:
+      context: ./docker/node
+    volumes:
+      - .:/app
+    working_dir: /app/build
+
 volumes:
   userfrosting-db:
     driver: local
