--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ services:
   - mysql
   - postgresql
   - memcached
-  # Temporary disabled as it's not compatible with PHP 5.6
-  # - redis-server
+  - redis-server
 
 php:
   - 5.6
@@ -36,7 +35,8 @@ before_install:
   - nvm install 10.12.0
   # Install Redis and Memcached
   - echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-  - printf "\n" | pecl install -f redis
+  # Temporary disabled as it's not compatible with PHP 5.6
+  # - printf "\n" | pecl install -f redis
 
 before_script:
   # install deps and UF
