--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,48 +6,45 @@ version: '{branch} - Build #{build}'
 
 ## Disable unneeded features
 build: false
-deploy: false
 platform:
   - x64
 clone_folder: C:\projects\userfrosting
 
-## Test against various PHP versions
-environment:
-  fast_finish: true
-  matrix:
-    - php_version: "7.1"
-    - php_version: "7.2"
-    - php_version: "7.3"
-
-## Cache composer, chocolatey and php.
 cache:
-  # Composer
-  - '%LOCALAPPDATA%\Composer\files -> composer.lock'
-  - composer.phar
-  # Cache chocolatey packages
   - C:\ProgramData\chocolatey\bin -> .appveyor.yml
   - C:\ProgramData\chocolatey\lib -> .appveyor.yml
-  # Cache php install
-  - c:\tools\php -> .appveyor.yml
+  - C:\tools\php -> .appveyor.yml
+  - C:\tools\cacert -> .appveyor.yml
+  - C:\tools\composer -> .appveyor.yml
+  - '%LOCALAPPDATA%\Composer\files -> composer.json'
 
-## Set up environment variables
+## Build matrix for lowest and highest possible targets
+environment:
+  DLLVersion: "5.6.1"
+  PHPBuild: "x64"
+  VC: "vc15"
+  matrix:
+  - db: mssql
+    driver: sqlsrv
+    db_version: sql2017
+    php: 7.2
+    DLLVersion: "5.3.0"
+  - db: mssql
+    driver: sqlsrv
+    db_version: sql2017
+    php: 7.3
+
 init:
   - SET PATH=C:\Program Files\OpenSSL;c:\tools\php;C:\tools\composer;%PATH%
   - SET COMPOSER_NO_INTERACTION=1
   - SET ANSICON=121x90 (121x90)
-services:
-  - mssql2014
 
 ## Install PHP and composer, and run the appropriate composer command
 install:
-    - ps: Install-Product node 10
     - ps: |
         # Check if installation is cached
         if (!(Test-Path c:\tools\php)) {
-
-          # Install PHP
-          appveyor-retry cinst --params '""/InstallDir:C:\tools\php""' --ignore-checksums -y php --version ((choco search php --exact --all-versions -r | select-string -pattern $env:php_version | sort { [version]($_ -split '\|' | select -last 1) } -Descending | Select-Object -first 1) -replace '[php|]','')
-
+          appveyor-retry cinst --params '""/InstallDir:C:\tools\php""' --ignore-checksums -y php --version ((choco search php --exact --all-versions -r | select-string -pattern $env:php | sort { [version]($_ -split '\|' | select -last 1) } -Descending | Select-Object -first 1) -replace '[php|]','')
           # install sqlite
           appveyor-retry cinst -y sqlite
           Get-ChildItem -Path c:\tools\php
@@ -64,41 +61,19 @@ install:
           Add-Content php.ini "`n extension=php_pdo_sqlite.dll"
           Add-Content php.ini "`n extension=php_sqlite3.dll"
           Add-Content php.ini "`n extension=php_curl.dll"
-          Add-Content php.ini "`n extension=php_gd2.dll"
+          Add-Content php.ini "`n curl.cainfo=C:\tools\cacert\bundle.pem"
 
-          # Get and install the MSSQL DLL's for each PHP version
-          $DLLVersion = "5.2.0"
+          # Get and install the MSSQL DLL's
           cd c:\tools\php\ext
-          If ($env:php_version -eq "7.3") {
-            $source = "https://windows.php.net/downloads/pecl/releases/sqlsrv/5.5.0preview/php_sqlsrv-5.5.0preview-$($env:php_version)-nts-vc15-x64.zip"
-            $destination = "c:\tools\php\ext\php_sqlsrv-5.5.0preview-$($env:php_version)-nts-vc15-x64.zip"
-            Invoke-WebRequest $source -OutFile $destination
-            7z x -y php_sqlsrv-5.5.0preview-$($env:php_version)-nts-vc15-x64.zip > $null
-            $source = "https://windows.php.net/downloads/pecl/releases/pdo_sqlsrv/5.5.0preview/php_pdo_sqlsrv-5.5.0preview-$($env:php_version)-nts-vc15-x64.zip"
-            $destination = "c:\tools\php\ext\php_pdo_sqlsrv-5.5.0preview-$($env:php_version)-nts-vc15-x64.zip"
-            Invoke-WebRequest $source -OutFile $destination
-            7z x -y php_pdo_sqlsrv-5.5.0preview-$($env:php_version)-nts-vc15-x64.zip > $null
-          } ElseIf ($env:php_version -eq "7.2") {
-            $source = "https://windows.php.net/downloads/pecl/releases/sqlsrv/$($DLLVersion)/php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip"
-            $destination = "c:\tools\php\ext\php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip"
-            Invoke-WebRequest $source -OutFile $destination
-            7z x -y php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip > $null
-            $source = "https://windows.php.net/downloads/pecl/releases/pdo_sqlsrv/$($DLLVersion)/php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip"
-            $destination = "c:\tools\php\ext\php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip"
-            Invoke-WebRequest $source -OutFile $destination
-            7z x -y php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc15-x64.zip > $null
-          } Else {
-            $source = "https://windows.php.net/downloads/pecl/releases/sqlsrv/$($DLLVersion)/php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip"
-            $destination = "c:\tools\php\ext\php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip"
-            Invoke-WebRequest $source -OutFile $destination
-            7z x -y php_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip > $null
-            $source = "https://windows.php.net/downloads/pecl/releases/pdo_sqlsrv/$($DLLVersion)/php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip"
-            $destination = "c:\tools\php\ext\php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip"
-            Invoke-WebRequest $source -OutFile $destination
-            7z x -y php_pdo_sqlsrv-$($DLLVersion)-$($env:php_version)-nts-vc14-x64.zip > $null
-          }
+          $source = "https://windows.php.net/downloads/pecl/releases/sqlsrv/$($env:DLLVersion)/php_sqlsrv-$($env:DLLVersion)-$($env:php)-nts-$($env:VC)-$($env:PHPBuild).zip"
+          $destination = "c:\tools\php\ext\php_sqlsrv-$($env:DLLVersion)-$($env:php)-nts-$($env:VC)-$($env:PHPBuild).zip"
+          Invoke-WebRequest $source -OutFile $destination
+          7z x -y php_sqlsrv-$($env:DLLVersion)-$($env:php)-nts-$($env:VC)-$($env:PHPBuild).zip > $null
+          $source = "https://windows.php.net/downloads/pecl/releases/pdo_sqlsrv/$($env:DLLVersion)/php_pdo_sqlsrv-$($env:DLLVersion)-$($env:php)-nts-$($env:VC)-$($env:PHPBuild).zip"
+          $destination = "c:\tools\php\ext\php_pdo_sqlsrv-$($env:DLLVersion)-$($env:php)-nts-$($env:VC)-$($env:PHPBuild).zip"
+          Invoke-WebRequest $source -OutFile $destination
+          7z x -y php_pdo_sqlsrv-$($env:DLLVersion)-$($env:php)-nts-$($env:VC)-$($env:PHPBuild).zip > $null
           Remove-Item c:\tools\php\* -include .zip
-
           cd c:\tools\php
           Add-Content php.ini "`nextension=php_sqlsrv.dll"
           Add-Content php.ini "`nextension=php_pdo_sqlsrv.dll"
@@ -112,16 +87,27 @@ install:
             appveyor-retry appveyor DownloadFile https://getcomposer.org/composer.phar -Filename C:\tools\composer\composer.phar
             Set-Content -path 'C:\tools\composer\composer.bat' -Value ('@php C:\tools\composer\composer.phar %*')
           }
+
+          # download CA bundle
+          if (!(Test-Path C:\tools\cacert)) {
+            New-Item -path c:\tools\ -name cacert -itemtype directory
+          }
+          if (!(Test-Path c:\tools\cacert\bundle.pem)) {
+            appveyor-retry appveyor DownloadFile https://curl.haxx.se/ca/cacert.pem -Filename C:\tools\cacert\bundle.pem
+          }
         }
     # install composer dependencies
     - cd C:\projects\userfrosting
     - appveyor-retry composer self-update
+    - appveyor-retry composer install --no-progress --prefer-dist
 
 before_test:
-  # Database setup for MSSQL
-  # https://github.com/joomla-framework/database
-  # http://www.drupalonwindows.com/en/blog/continuous-integration-and-testing-drupal-appveyor
-  - ps: sqlcmd -b -E -S "(local)\SQL2014" -Q "CREATE DATABASE userfrosting"
+  - ps: $instanceName = $env:db_version.ToUpper()
+  - ps: $sqlInstance = "(local)\$instanceName"
+  - ps: net start "MSSQL`$$instanceName"
+  - ps: sqlcmd -b -E -S "$sqlInstance" -Q "CREATE DATABASE userfrosting"
+  - ps: sqlcmd -S "$sqlInstance" -U "sa" -P "Password12!" -i $env:APPVEYOR_BUILD_FOLDER\Tests\Stubs\sqlsrv.sql
+  - ps: $phpunitConfig = ".travis\phpunit.appveyor_$($env:db_version).xml"
 
   # Copy sprinkle file
   - echo F | xcopy app\sprinkles.example.json app\sprinkles.json /y
@@ -146,4 +132,5 @@ before_test:
 
 ## Run the actual test
 test_script:
-  - app\vendor\bin\phpunit
+  - cd C:\projects\userfrosting
+  - ps: app\vendor\bin\phpunit
