--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,121 +5,74 @@
 version: '{branch} - Build #{build}'
 
 ## Disable unneeded features
-build: false
-platform:
-  - x64
-clone_folder: C:\projects\userfrosting
+build: off
+deploy: off
 
+## Test against various PHP versions
+environment:
+  matrix:
+    - php_version: "7.1"
+    - php_version: "7.2"
+    - php_version: "7.3"
+
+## Cache composer, chocolatey and php.
 cache:
+  # Composer
+  - '%LOCALAPPDATA%\Composer\files -> composer.lock'
+  - composer.phar
+  # Cache chocolatey packages
   - C:\ProgramData\chocolatey\bin -> .appveyor.yml
   - C:\ProgramData\chocolatey\lib -> .appveyor.yml
-  - C:\tools\cacert -> .appveyor.yml
-  - C:\tools\composer -> .appveyor.yml
-  - '%LOCALAPPDATA%\Composer\files -> composer.json'
+  # Cache php install
+  - c:\tools\php -> .appveyor.yml
 
-## Build matrix for lowest and highest possible targets
-environment:
-  DLLVersion: "5.6.1"
-  PHPBuild: "x64"
-  VC: "vc15"
-  matrix:
-  - db: mssql
-    driver: sqlsrv
-    db_version: sql2017
-    php: 7.2
-    DLLVersion: "5.3.0"
-  - db: mssql
-    driver: sqlsrv
-    db_version: sql2017
-    php: 7.3
-
+## Set up environment variables
 init:
-  - SET PATH=C:\Program Files\OpenSSL;c:\tools\php;C:\tools\composer;%PATH%
+  - SET PATH=C:\Program Files\OpenSSL;c:\tools\php;%PATH%
   - SET COMPOSER_NO_INTERACTION=1
+  - SET PHP=1 # This var is connected to PHP install cache
   - SET ANSICON=121x90 (121x90)
 
 ## Install PHP and composer, and run the appropriate composer command
 install:
-    - ps: |
-        appveyor-retry cinst --params '""/InstallDir:C:\tools\php""' --ignore-checksums -y php --version ((choco search php --exact --all-versions -r | select-string -pattern $env:php | sort { [version]($_ -split '\|' | select -last 1) } -Descending | Select-Object -first 1) -replace '[php|]','')
-        # Check if installation is cached
-        if (!(Test-Path c:\tools\php)) {
-          # appveyor-retry cinst --params '""/InstallDir:C:\tools\php""' --ignore-checksums -y php --version ((choco search php --exact --all-versions -r | select-string -pattern $env:php | sort { [version]($_ -split '\|' | select -last 1) } -Descending | Select-Object -first 1) -replace '[php|]','')
-          # install sqlite
-          appveyor-retry cinst -y sqlite
-          Get-ChildItem -Path c:\tools\php
-          cd c:\tools\php
+  - IF EXIST c:\tools\php (SET PHP=0) # Checks for the PHP install being cached
+  - ps: appveyor-retry cinst --params '""/InstallDir:C:\tools\php""' --ignore-checksums -y php --version ((choco search php --exact --all-versions -r | select-string -pattern $env:php_version | sort { [version]($_ -split '\|' | select -last 1) } -Descending | Select-Object -first 1) -replace '[php|]','')
+  # - ps: appveyor-retry cinst -y sqlite
+  - cd c:\tools\php
+  - IF %PHP%==1 copy php.ini-production php.ini /Y
+  - IF %PHP%==1 echo date.timezone="UTC" >> php.ini
+  - IF %PHP%==1 echo extension_dir=ext >> php.ini
+  - IF %PHP%==1 echo extension=php_openssl.dll >> php.ini
+  - IF %PHP%==1 echo extension=php_mbstring.dll >> php.ini
+  - IF %PHP%==1 echo extension=php_fileinfo.dll >> php.ini
+  - IF %PHP%==1 echo extension=php_pdo_sqlite.dll >> php.ini
+  - IF %PHP%==1 echo extension=php_sqlite3.dll >> php.ini
+  #- IF %PHP%==1 echo extension=php_sqlsrv.dll >> php.ini
+  #- IF %PHP%==1 echo extension=php_pdo_sqlsrv.dll >> php.ini
+  - IF %PHP%==1 echo @php %%~dp0composer.phar %%* > composer.bat
+  - appveyor-retry appveyor DownloadFile https://getcomposer.org/composer.phar
 
-          # Set PHP environment items that are always needed
-          copy php.ini-production php.ini
-          Add-Content php.ini "`n date.timezone=UTC"
-          Add-Content php.ini "`n extension_dir=ext"
-          Add-Content php.ini "`n memory_limit=1G"
-          Add-Content php.ini "`n extension=php_openssl.dll"
-          Add-Content php.ini "`n extension=php_mbstring.dll"
-          Add-Content php.ini "`n extension=php_fileinfo.dll"
-          Add-Content php.ini "`n extension=php_pdo_sqlite.dll"
-          Add-Content php.ini "`n extension=php_sqlite3.dll"
-          Add-Content php.ini "`n extension=php_curl.dll"
-          Add-Content php.ini "`n curl.cainfo=C:\tools\cacert\bundle.pem"
-
-          # Get and install the MSSQL DLL's
-          cd c:\tools\php\ext
-          $source = "https://windows.php.net/downloads/pecl/releases/sqlsrv/$($env:DLLVersion)/php_sqlsrv-$($env:DLLVersion)-$($env:php)-nts-$($env:VC)-$($env:PHPBuild).zip"
-          $destination = "c:\tools\php\ext\php_sqlsrv-$($env:DLLVersion)-$($env:php)-nts-$($env:VC)-$($env:PHPBuild).zip"
-          Invoke-WebRequest $source -OutFile $destination
-          7z x -y php_sqlsrv-$($env:DLLVersion)-$($env:php)-nts-$($env:VC)-$($env:PHPBuild).zip > $null
-          $source = "https://windows.php.net/downloads/pecl/releases/pdo_sqlsrv/$($env:DLLVersion)/php_pdo_sqlsrv-$($env:DLLVersion)-$($env:php)-nts-$($env:VC)-$($env:PHPBuild).zip"
-          $destination = "c:\tools\php\ext\php_pdo_sqlsrv-$($env:DLLVersion)-$($env:php)-nts-$($env:VC)-$($env:PHPBuild).zip"
-          Invoke-WebRequest $source -OutFile $destination
-          7z x -y php_pdo_sqlsrv-$($env:DLLVersion)-$($env:php)-nts-$($env:VC)-$($env:PHPBuild).zip > $null
-          Remove-Item c:\tools\php\* -include .zip
-          cd c:\tools\php
-          Add-Content php.ini "`nextension=php_sqlsrv.dll"
-          Add-Content php.ini "`nextension=php_pdo_sqlsrv.dll"
-          Add-Content php.ini "`n"
-
-          # download Composer
-          if (!(Test-Path C:\tools\composer)) {
-            New-Item -path c:\tools -name composer -itemtype directory
-          }
-          if (!(Test-Path c:\tools\composer\composer.phar)) {
-            appveyor-retry appveyor DownloadFile https://getcomposer.org/composer.phar -Filename C:\tools\composer\composer.phar
-            Set-Content -path 'C:\tools\composer\composer.bat' -Value ('@php C:\tools\composer\composer.phar %*')
-          }
-
-          # download CA bundle
-          if (!(Test-Path C:\tools\cacert)) {
-            New-Item -path c:\tools\ -name cacert -itemtype directory
-          }
-          if (!(Test-Path c:\tools\cacert\bundle.pem)) {
-            appveyor-retry appveyor DownloadFile https://curl.haxx.se/ca/cacert.pem -Filename C:\tools\cacert\bundle.pem
-          }
-        }
     # install composer dependencies
     - cd C:\projects\userfrosting
     - appveyor-retry composer self-update
     - appveyor-retry composer install --no-progress --prefer-dist
 
 before_test:
-  - ps: $instanceName = $env:db_version.ToUpper()
-  - ps: $sqlInstance = "(local)\$instanceName"
-  - ps: net start "MSSQL`$$instanceName"
-  - ps: sqlcmd -b -E -S "$sqlInstance" -Q "CREATE DATABASE userfrosting"
-  - ps: sqlcmd -S "$sqlInstance" -U "sa" -P "Password12!" -i $env:APPVEYOR_BUILD_FOLDER\Tests\Stubs\sqlsrv.sql
-  - ps: $phpunitConfig = ".travis\phpunit.appveyor_$($env:db_version).xml"
+  # - ps: $instanceName = $env:db_version.ToUpper()
+  # - ps: $sqlInstance = "(local)\$instanceName"
+  # - ps: net start "MSSQL`$$instanceName"
+  # - ps: sqlcmd -b -E -S "$sqlInstance" -Q "CREATE DATABASE userfrosting"
+  # - ps: sqlcmd -S "$sqlInstance" -U "sa" -P "Password12!" -i $env:APPVEYOR_BUILD_FOLDER\Tests\Stubs\sqlsrv.sql
+  # - ps: $phpunitConfig = ".travis\phpunit.appveyor_$($env:db_version).xml"
 
   # Copy sprinkle file
   - echo F | xcopy app\sprinkles.example.json app\sprinkles.json /y
 
   # Setup .env
   - echo UF_MODE="debug" > app/.env
-  - echo DB_DRIVER="sqlsrv" >> app/.env
-  - echo DB_HOST=(local)\SQL2014 >> app/.env
-  - echo DB_PORT="1433" >> app/.env
-  - echo DB_NAME="userfrosting" >> app/.env
-  - echo DB_USER="sa" >> app/.env
-  - echo DB_PASSWORD="Password12!" >> app/.env
+  - echo DB_DRIVER="sqlite" >> app/.env
+  - echo DB_HOST=127.0.0.1 >> app/.env
+  - echo DB_NAME="userfrosting.db" >> app/.env
   - echo TEST_DB="default" >> app/.env
 
   # Install Composer dependencies
