--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,7 @@ before_install:
   - nvm install 10.12.0
   # Install Redis and Memcached
   - echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-  # Temporary disabled as it's not compatible with PHP 5.6
-  # - printf "\n" | pecl install -f redis
+  - printf "\n" | pecl install -f redis
 
 before_script:
   # install deps and UF
