Added PHP 7.4 to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ php:
   - 7.1
   - 7.2
   - 7.3
+  - 7.4snapshot
 
 env:
   matrix:
@@ -19,6 +20,13 @@ env:
     - DB=sqlite
     - DB=pgsql
     - DB=memory
+
+matrix:
+  fast_finish: true
+
+  # Remove before UF 4.4.0 official release, and after 7.4 release !
+  allow_failures:
+    - php: 7.4snapshot
 
 cache:
   directories:
