--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -4,5 +4,6 @@ parameters:
   level: max
   ignoreErrors:
     # Ignore false positive PHPStan can't understand, until we can fix it
-    - '#Access to an undefined property Interop\\Container\\ContainerInterface::\$[a-zA-Z0-9\\_]+.#' # Ignore our CI container
+    - '#Call to an undefined method Psr\\Container\\ContainerInterface::extend().#'
+    - '#Access to an undefined property Psr\\Container\\ContainerInterface::\$[a-zA-Z0-9\\_]+.#' # Ignore our CI container
     - '#Call to an undefined static method UserFrosting\\Sprinkle\\[a-zA-Z0-9\\_]+\\Facades\\[a-zA-Z0-9\\_\(\):]+.#' # Ignore Facades
