--- a/.github/workflows/mysql.yml
+++ b/.github/workflows/mysql.yml
@@ -1,4 +1,4 @@
-name: Sqlite Build
+name: MySQL Build
 on: [push, pull_request]
 jobs:
   build:
@@ -9,12 +9,23 @@ jobs:
       matrix:
         php-versions: ['7.1', '7.2', '7.3', '7.4']
     env:
-      DB_DRIVER: sqlite
-      DB_HOST: 127.0.0.1
-      DB_NAME: userfrosting.db
+      DB_DRIVER: mysql
+      DB_HOST: localhost
+      DB_USER: root
+      DB_PASSWORD: root
+      DB_NAME: userfrosting
       TEST_DB: default
       UF_MODE: debug
     services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: false
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: userfrosting
+        ports:
+          - 3306/tcp
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
       redis:
         image: redis
         ports:
