--- a/app/sprinkles/core/composer.json
+++ b/app/sprinkles/core/composer.json
@@ -42,7 +42,7 @@
         "phpmailer/phpmailer": "5.2.10",
         "rockettheme/toolbox": "1.3.1",
         "slim/csrf": "^0.8",
-        "slim/slim": "^3",
+        "slim/slim": "3.12.2",
         "slim/twig-view": "^1.2",
         "symfony/http-foundation": "*",
         "twig/twig": "^1.18",
